Fixes z-index on footer
Fixes bug allowing play button to cover footer when scrolling.
Adds z-index of 15 to footer to fix.

--- a/assets/styles/main-page.scss
+++ b/assets/styles/main-page.scss
@@ -133,6 +133,7 @@ footer {
   min-height: 1em;
   background-color: #cc181e;
   text-align: center;
+  z-index: 15;
 }
 
 #succ-fail-mess {
